<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calendar</string>
    <string name="action_settings">мемсы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MondayAbbr">ПН</string>
    <string name="TuesdayAbbr">ВТ</string>
    <string name="WednesdayAbbr">СР</string>
    <string name="ThursdayAbbr">ЧТ</string>
    <string name="FridayAbbr">ПТ</string>
    <string name="SaturdayAbbr">СБ</string>
    <string name="SundayAbbr">ВС</string>
</resources>